[gd_scene load_steps=6 format=3 uid="uid://dyb0knu8gwhcv"]

[ext_resource type="Script" uid="uid://cd3emp71kniop" path="res://CNC_Interface.gd" id="1_2hfcp"]
[ext_resource type="Script" uid="uid://6xmstcx52dee" path="res://Script Secondari/edit_value_dialog.gd" id="2_aysmk"]
[ext_resource type="Script" uid="uid://uta3h4xdbg7t" path="res://Script Secondari/create_program_dialog.gd" id="3_1jvqu"]
[ext_resource type="Script" uid="uid://r0uvn8270sir" path="res://Script Secondari/rename_program_dialog.gd" id="4_qgth4"]
[ext_resource type="Script" uid="uid://hydvbjjgbr1o" path="res://Script Secondari/delete_confirm_dialog.gd" id="5_1rr8u"]

[node name="CNC_Interface" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(2026, 1381)
script = ExtResource("1_2hfcp")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TabContainer" type="TabContainer" parent="MarginContainer"]
layout_mode = 2
current_tab = 0

[node name="Editor" type="VBoxContainer" parent="MarginContainer/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="HSplitContainer" type="HSplitContainer" parent="MarginContainer/TabContainer/Editor"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/TabContainer/Editor/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/TabContainer/Editor/HSplitContainer/VBoxContainer"]
layout_mode = 2
text = "Programmi in Memoria"

[node name="ProgramList" type="ItemList" parent="MarginContainer/TabContainer/Editor/HSplitContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/TabContainer/Editor/HSplitContainer/VBoxContainer"]
layout_mode = 2

[node name="SetActiveButton" type="Button" parent="MarginContainer/TabContainer/Editor/HSplitContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Imposta Attivo"

[node name="DeleteButton" type="Button" parent="MarginContainer/TabContainer/Editor/HSplitContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Cancella"

[node name="CreateButton" type="Button" parent="MarginContainer/TabContainer/Editor/HSplitContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Crea"

[node name="RenameButton" type="Button" parent="MarginContainer/TabContainer/Editor/HSplitContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Rinomina"

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/TabContainer/Editor/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SelectedProgramLabel" type="Label" parent="MarginContainer/TabContainer/Editor/HSplitContainer/VBoxContainer2"]
layout_mode = 2
text = "Contenuto Programma: (Nessuno)"

[node name="ProgramContentTextEdit" type="TextEdit" parent="MarginContainer/TabContainer/Editor/HSplitContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="Memoria" type="VBoxContainer" parent="MarginContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="MDI" type="VBoxContainer" parent="MarginContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="OffsetUtensili" type="VBoxContainer" parent="MarginContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 3

[node name="Label" type="Label" parent="MarginContainer/TabContainer/OffsetUtensili"]
layout_mode = 2
text = "Offset Utensili (Doppio Click per Modificare)"

[node name="ToolOffsetTree" type="Tree" parent="MarginContainer/TabContainer/OffsetUtensili"]
layout_mode = 2
size_flags_vertical = 3
columns = 5
hide_root = true

[node name="OriginiPezzo" type="VBoxContainer" parent="MarginContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/TabContainer/OriginiPezzo"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/TabContainer/OriginiPezzo/HBoxContainer"]
layout_mode = 2
text = "Tipo Origine: "

[node name="OptionButton" type="OptionButton" parent="MarginContainer/TabContainer/OriginiPezzo/HBoxContainer"]
layout_mode = 2

[node name="WorkOffsetTree" type="Tree" parent="MarginContainer/TabContainer/OriginiPezzo"]
layout_mode = 2
size_flags_vertical = 3
columns = 5
hide_root = true

[node name="VariabiliMacro" type="VBoxContainer" parent="MarginContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 5

[node name="Label" type="Label" parent="MarginContainer/TabContainer/VariabiliMacro"]
layout_mode = 2
text = "Variabili Macro Comuni (#100-#199, #500-#999)"

[node name="MacroVarTree" type="Tree" parent="MarginContainer/TabContainer/VariabiliMacro"]
layout_mode = 2
size_flags_vertical = 3
columns = 2
hide_root = true

[node name="EditValueDialog" type="ConfirmationDialog" parent="."]
oversampling_override = 1.0
title = "Modifica Valore"
size = Vector2i(200, 115)
script = ExtResource("2_aysmk")

[node name="VBoxContainer" type="VBoxContainer" parent="EditValueDialog"]
offset_left = 8.0
offset_top = 8.0
offset_right = 192.0
offset_bottom = 69.0

[node name="Label" type="Label" parent="EditValueDialog/VBoxContainer"]
layout_mode = 2
text = "Nuovo valore per: "

[node name="LineEdit" type="LineEdit" parent="EditValueDialog/VBoxContainer"]
layout_mode = 2
select_all_on_focus = true

[node name="CreateProgramDialog" type="ConfirmationDialog" parent="."]
oversampling_override = 1.0
title = "Crea Nuovo Programma"
size = Vector2i(451, 115)
script = ExtResource("3_1jvqu")

[node name="VBoxContainer" type="VBoxContainer" parent="CreateProgramDialog"]
offset_left = 8.0
offset_top = 8.0
offset_right = 443.0
offset_bottom = 69.0

[node name="Label" type="Label" parent="CreateProgramDialog/VBoxContainer"]
layout_mode = 2
text = "Inserisci il numero del nuovo programma (es. 1234):"

[node name="ProgramNumberEdit" type="LineEdit" parent="CreateProgramDialog/VBoxContainer"]
layout_mode = 2
select_all_on_focus = true

[node name="RenameProgramDialog" type="ConfirmationDialog" parent="."]
oversampling_override = 1.0
title = "Rinomina Programma"
initial_position = 2
size = Vector2i(359, 150)
ok_button_text = "Rinomina"
cancel_button_text = "Annulla"
script = ExtResource("4_qgth4")

[node name="VBoxContainer" type="VBoxContainer" parent="RenameProgramDialog"]
offset_left = 8.0
offset_top = 8.0
offset_right = 351.0
offset_bottom = 104.0

[node name="@Label@22175" type="Label" parent="RenameProgramDialog/VBoxContainer"]
layout_mode = 2
text = "Inserisci il nuovo numero del programma:"

[node name="NewProgramNumberEdit" type="LineEdit" parent="RenameProgramDialog/VBoxContainer"]
layout_mode = 2
placeholder_text = "Es: 1234"

[node name="DeleteConfirmDialog" type="ConfirmationDialog" parent="."]
oversampling_override = 1.0
title = "Conferma Cancellazione"
initial_position = 2
size = Vector2i(200, 106)
ok_button_text = "Cancella"
cancel_button_text = "Annulla"
script = ExtResource("5_1rr8u")

[node name="Label" type="Label" parent="DeleteConfirmDialog"]
offset_left = 8.0
offset_top = 8.0
offset_right = 192.0
offset_bottom = 60.0
text = "Sei sicuro di voler cancellare?"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[connection signal="empty_clicked" from="MarginContainer/TabContainer/Editor/HSplitContainer/VBoxContainer/ProgramList" to="." method="_on_program_list_empty_clicked"]
[connection signal="item_clicked" from="MarginContainer/TabContainer/Editor/HSplitContainer/VBoxContainer/ProgramList" to="." method="_on_program_list_item_clicked"]
[connection signal="item_selected" from="MarginContainer/TabContainer/Editor/HSplitContainer/VBoxContainer/ProgramList" to="." method="_on_program_list_item_selected"]
[connection signal="multi_selected" from="MarginContainer/TabContainer/Editor/HSplitContainer/VBoxContainer/ProgramList" to="." method="_on_program_list_multi_selected"]
[connection signal="editing_toggled" from="EditValueDialog/VBoxContainer/LineEdit" to="EditValueDialog" method="_on_line_edit_editing_toggled"]
[connection signal="text_submitted" from="EditValueDialog/VBoxContainer/LineEdit" to="EditValueDialog" method="_on_line_edit_text_submitted"]
[connection signal="editing_toggled" from="CreateProgramDialog/VBoxContainer/ProgramNumberEdit" to="CreateProgramDialog" method="_on_program_number_edit_editing_toggled"]
[connection signal="text_submitted" from="CreateProgramDialog/VBoxContainer/ProgramNumberEdit" to="CreateProgramDialog" method="_on_program_number_edit_text_submitted"]
[connection signal="editing_toggled" from="RenameProgramDialog/VBoxContainer/NewProgramNumberEdit" to="RenameProgramDialog" method="_on_new_program_number_edit_editing_toggled"]
[connection signal="text_submitted" from="RenameProgramDialog/VBoxContainer/NewProgramNumberEdit" to="RenameProgramDialog" method="_on_new_program_number_edit_text_submitted"]
